Better compatibility